# labchart2cfd

./: .gitignore  OSAMRI045TestFlowProfile.csv  OSAMRI045TestPressureProfile.csv  OSAMRI045Test_trigger_info.txt  README.md  pyproject.toml
docs/plans/: 2026-03-16-tkinter-gui.md
src/labchart2cfd/: __init__.py  __main__.py
src/labchart2cfd/cli/: __init__.py  main.py
src/labchart2cfd/config/: __init__.py  models.py
src/labchart2cfd/gui/: __init__.py  app.py
src/labchart2cfd/io/: __init__.py  csv_export.py  labchart.py
src/labchart2cfd/processing/: __init__.py  drift_correction.py  rearrangement.py  resampling.py  smoothing.py  step_detection.py  unit_conversion.py
src/labchart2cfd/visualization/: __init__.py  plots.py
src/labchart2cfd/workflows/: __init__.py  base.py  cpap.py  ct.py  phase_contrast.py  standard_osamri.py
tests/: __init__.py  test_io.py  test_processing.py
